[package]
name = "limber"
version = "1.1.0" # remember to update html_root_url
authors = ["Isaac Whitfield <iw@whitfin.io>"]
description = "A simple (but quick) tool for backing up Elasticsearch documents."
repository = "https://github.com/whitfin/limber"
keywords = ["backup", "elastic", "elasticsearch", "import", "logging"]
categories = ["command-line-interface", "command-line-utilities", "parsing"]
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0"
bytelines = "2.4"
clap = "3.1"
elasticsearch = "7.14.0-alpha.1"
futures = { version = "0.3" }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.2"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
